Revision history for AnyEvent-HTTP-LWP-UserAgent

{{$NEXT}}

0.06    Wed Mar 09, 2011
        Don't overload Coro stack when we have
        a really big url.

0.05    Thu Mar 03, 2011
        Increase version.

0.04    Thu Mar 03, 2011
        More compatible with LWP::UserAgent using handlers.
        Thanks motetem (Masatoshi Fujimura) for patch.

0.03    Thu Dec 09, 2010
        Support cookies.
        Fix headers that exists many times in response.

0.02    Tue Dec 07, 2010
        Fix SYNOPSIS in POD, thanks to Ryan Perry.

0.01    Fri Nov 26, 2010
        First prototype