@@ -1,3 +1,4 @@
+.build
 *~
 AnyEvent-HTTP-LWP-UserAgent-*
 stuff
